# solarmax_query

./: README.md  setup.cfg  solarmax.py
solarmax_query/: __init__.py  solarmax.py
