[metadata]
name = solarmax-query
version = 1.0.0
author = 3tes
author_email = 3tes@3tes.dev
description = A library for quering SolarMax inverters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/3tes/solarmax-query
project_urls =
    Bug Tracker = https://github.com/3tes/solarmax-query/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src